force-app/main/default/objects/Review__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments and thoughts on candidate&apos;s application to a position</description>
    <label>Comments</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>